<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
   >

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/arrow_back"
                app:tint="@color/yellow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/unica_one"
                android:text="@string/Sign_in"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/unica_one"
                android:text="@string/welcome_back"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:orientation="vertical">
                <!--Username-->


                <!--            Email -->

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputemail_"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_placeholder"
                    android:textColorHint="@color/white"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/yellow"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/yellow"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/email"

                    app:startIconTint="@color/yellow">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/unica_one"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--            Password-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputpassword_"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_placeholder"
                    android:paddingTop="2dp"
                    android:textColorHint="@color/white"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/yellow"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/yellow"
                    app:startIconDrawable="@drawable/lock_closed"
                    app:startIconTint="@color/yellow">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/unica_one"
                        android:textColorHint="@color/white"
                        android:inputType="textPassword"
                        android:textColor="@color/white" />


                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <CheckBox
                        android:id="@+id/checkbox"
                        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:buttonTint="@color/yellow"
                        android:fontFamily="@font/unica_one"
                        android:text="@string/remember_me"
                        android:textColor="@color/white"

                        tools:ignore="TouchTargetSizeCheck" />

                    <Button
                        android:id="@+id/forgot_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="#00000000"
                        android:fontFamily="@font/unica_one"
                        android:text="@string/forgot_password"
                        android:textColor="@color/white" />


                </RelativeLayout>


                <!--            buttons -->


                <Button
                    android:id="@+id/loginbtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/yellow"
                    android:fontFamily="@font/unica_one"
                    android:text="@string/Sign_in"
                    android:textColor="@color/so_Dark"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:backgroundTint="@null" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/unica_one"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textColor="@color/yellow"
                    android:textSize="14sp"
                    android:textStyle="bold" />


                <!--            Sign up -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="#00000000"
                        android:fontFamily="@font/unica_one"
                        android:text="@string/already_have_an_account"
                        android:textColor="@color/white" />


                    <Button
                        android:id="@+id/already_account_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:fontFamily="@font/unica_one"
                        android:gravity="start"
                        android:text="@string/Sign_up"
                        android:textColor="@color/yellow" />


                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>