<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/arrow_back"
                app:tint="@color/yellow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/unica_one"
                android:text="@string/Sign_up"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/unica_one"
                android:text="@string/create_acc"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputname"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:padding="1dp"
                    android:textColorHint="@color/white"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/yellow"
                    app:boxStrokeWidthFocused="2dp"
                    app:counterTextColor="@color/yellow"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/yellow"
                    app:startIconDrawable="@drawable/user_outline"
                    app:startIconTint="@color/yellow">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/unica_one"
                        android:inputType="text"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>
                <!--Username-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputuser"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username_placeholder"
                    android:padding="1dp"
                    android:textColorHint="@color/white"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/yellow"
                    app:boxStrokeWidthFocused="2dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:counterTextColor="@color/yellow"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/yellow"
                    app:startIconDrawable="@drawable/account_reg"
                    app:startIconTint="@color/yellow">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/unica_one"
                        android:inputType="text"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--            Email -->

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputemail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_placeholder"
                    android:textColorHint="@color/white"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/yellow"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/yellow"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/email"

                    app:startIconTint="@color/yellow">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/unica_one"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--            Password-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputpassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_placeholder"
                    android:paddingTop="2dp"
                    android:textColorHint="@color/white"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/yellow"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/yellow"
                    app:startIconDrawable="@drawable/lock_closed"
                    app:startIconTint="@color/yellow">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/unica_one"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />


                </com.google.android.material.textfield.TextInputLayout>

                <!--            age -->


                <!--            buttons -->


                <Button
                    android:id="@+id/registerbtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/yellow"
                    android:fontFamily="@font/unica_one"
                    android:text="@string/Sign_up"
                    android:textColor="@color/so_Dark"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:backgroundTint="@null"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="#00000000"
                        android:fontFamily="@font/unica_one"
                        android:text="@string/register_policy"
                        android:textColor="@color/white" />


                    <Button
                        android:id="@+id/policy"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:fontFamily="@font/unica_one"
                        android:gravity="start"
                        android:paddingStart="3dp"
                        android:text="@string/terms_policy"
                        android:textColor="@color/yellow"
                        tools:ignore="TouchTargetSizeCheck" />


                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/unica_one"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textColor="@color/yellow"
                    android:textSize="14sp"
                    android:textStyle="bold" />


                <!--            Sign up -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:fontFamily="@font/unica_one"
                        android:text="@string/already_have_an_account"
                        android:textColor="@color/white" />


                    <Button
                        android:id="@+id/already_account_button"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:fontFamily="@font/unica_one"
                        android:gravity="start"
                        android:text="@string/Sign_up"
                        android:textColor="@color/yellow"
                        tools:ignore="TouchTargetSizeCheck" />


                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>